<resources>
    <string name="app_name">Three in All</string>
    <string name="images">Images</string>
    <string name="header">Make your choice</string>
    <string name="anecdotes">anecdotes</string>
    <string name="omens">omens</string>
    <string name="citations">citations</string>
    <string name="sea_image">sea image</string>
    <string name="emotion_images">emotion images</string>
    <string name="about_author">Author</string>
    <string name="anecdotes_header">Anecdotes</string>

    <string name="firstAnecdote">Three tomatoes are walkin\' down the street. Papa Tomato, Mama Tomato and Baby Tomato. Baby Tomato starts lagging behind, and Papa Tomato gets really angry. Goes back and squishes him and says: «Catch up»</string>

    <string name="secondAnecdote">I work harder than God. If He had hired me, He would have made the world by Thursday.</string>

    <string name="thirdAnecdote">There\'s an old joke - um… two elderly women are at a Catskill mountain resort, and one of \'em says, «Boy, the food at this place is really terrible». The other one says, «Yeah, I know; and such small portions».</string>
    <string name="split_text">* * *</string>

    <string name="omens_header">Omens</string>
    <string name="firstOmen">Breaking a mirror brings seven years of trouble. However, if you put a piece of a mirror under the ground, the curse will disappear. The ancient Romans decided that a broken mirror would cause seven years of trouble; in fact, at the time there was a belief that life would renew itself every seven years.</string>
    <string name="secondOmen">This is undoubtedly one of the most widespread beliefs throughout Italy and beyond, but why should the crossing of a black cat be a bad omen? To discover the origin of this superstition, one must go back to the Middle Ages.</string>
    <string name="thirdOmen">It is said that a drop of wax that falls along the side of a candle brings a lot of bad luck. Moreover, the spouses of Crana (Novara), after the wedding ceremony, blow together to blow out two candles. If they extinguish them at the same time, they will live long and happily together, otherwise, it is a sign of widowhood.</string>
    <string name="firstOmenTitle"><u>Break a Mirror</u></string>
    <string name="secondOmenTitle"><u>Black cat</u></string>
    <string name="thirdOmenTitle"><u>Candle’s wax</u></string>
    <string name="citations_header">Citations</string>

    <string name="firstCitation">"The greatest glory in living lies not in never falling, but in rising every time we fall".</string>
    <string name="secondCitation">"The way to get started is to quit talking and begin doing".</string>
    <string name="thirdCitation">"Your time is limited, so don\'t waste it living someone else\'s life. Don\'t be trapped by dogma – which is living with the results of other people's thinking".</string>
    <string name="firstCitationAuthor">-Nelson Mandela</string>
    <string name="secondCitationAuthor">-Walt Disney</string>
    <string name="thirdCitationAuthor">-Steve Jobs</string>
    <string name="emotions_header">Emotions</string>
    <string name="about_author2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean fermentum porttitor elit non molestie. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.

        Etiam rutrum tempor justo id rhoncus. Etiam venenatis enim eget semper viverra. Aliquam non neque vitae ante efficitur volutpat. In nunc odio, scelerisque a eros eu, faucibus mollis ipsum. Fusce pellentesque ipsum a lacus malesuada, sit amet mattis nulla suscipit. Fusce tempor leo vel euismod iaculis. Sed lacinia vehicula arcu id convallis. Phasellus vestibulum libero sed faucibus mattis.

        Curabitur sed nisl vel elit vestibulum ornare. Pellentesque non turpis eleifend, mattis mauris facilisis, cursus magna. Donec consectetur varius ultricies. Proin sagittis tellus ut tortor aliquet, at facilisis ante tempor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae felis facilisis, malesuada nulla eu, venenatis magna.</string>
    <string name="author">Author</string>


</resources>