<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llMainMenuHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/llHeaderStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/header"
            style="@style/tvHeaderStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/llMainMenuHeader">

        <TextView
            style="@style/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/llMainMenuHeader">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btImages"
                style="@style/typeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/images" />

            <Button
                android:id="@+id/btAnecdotes"
                style="@style/typeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/anecdotes" />

            <Button
                android:id="@+id/btOmens"
                style="@style/typeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/omens" />

            <Button
                android:id="@+id/btCitations"
                style="@style/typeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/citations" />

            <Button
                android:id="@+id/btSeaImage"
                style="@style/typeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sea_image" />

            <Button
                android:id="@+id/btEmotionImages"
                style="@style/typeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/emotion_images" />

            <Button
                android:id="@+id/btAboutAuthor"
                style="@style/typeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_author" />


        </LinearLayout>


        </LinearLayout>




</RelativeLayout>